fix: health controller constructor and cors